tests/snapshots/cli__events_cli_test.snap
---
source: tests/cli.rs
assertion_line: 43
expression: json
---
{
  "circles": [
    {
      "id": "master",
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 20
      },
      "wards": []
    }
  ],
  "control_events": [],
  "daemons": [
    {
      "id": "kick",
      "kind": "sample",
      "params": {
        "gain_db": -3.0
      },
      "sample": "samples/kick.wav",
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 9
      }
    },
    {
      "id": "bass",
      "kind": "saw_sub",
      "params": {
        "cutoff_hz": 300.0,
        "drive": 0.3
      },
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 10
      }
    }
  ],
  "duration_beats": 4.0,
  "events": [
    {
      "daemon": "kick",
      "duration_beats": 0.25,
      "id": "evt_bb5d32adc4429162",
      "kind": "trigger",
      "params": {
        "gain_db": -3.0
      },
      "semantic_path": "rite:main/invoke:0/step:0",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 16
      },
      "time_beats": 0.0,
      "velocity": 1.0
    },
    {
      "daemon": "bass",
      "duration_beats": 0.5,
      "id": "evt_6709128dd4b54dc3",
      "kind": "note",
      "params": {
        "cutoff_hz": 300.0,
        "drive": 0.3
      },
      "pitch": {
        "midi": 29,
        "name": "F1"
      },
      "semantic_path": "rite:main/invoke:1/step:0",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 17
      },
      "time_beats": 0.0,
      "velocity": 1.0
    },
    {
      "daemon": "kick",
      "duration_beats": 0.25,
      "id": "evt_bb5d2eadc4428a96",
      "kind": "trigger",
      "params": {
        "gain_db": -3.0
      },
      "semantic_path": "rite:main/invoke:0/step:4",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 16
      },
      "time_beats": 1.0,
      "velocity": 1.0
    },
    {
      "daemon": "bass",
      "duration_beats": 0.5,
      "id": "evt_6709148dd4b55129",
      "kind": "note",
      "params": {
        "cutoff_hz": 300.0,
        "drive": 0.3
      },
      "pitch": {
        "midi": 29,
        "name": "F1"
      },
      "semantic_path": "rite:main/invoke:1/step:2",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 17
      },
      "time_beats": 1.0,
      "velocity": 1.0
    },
    {
      "daemon": "kick",
      "duration_beats": 0.25,
      "id": "evt_bb5d3aadc4429efa",
      "kind": "trigger",
      "params": {
        "gain_db": -3.0
      },
      "semantic_path": "rite:main/invoke:0/step:8",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 16
      },
      "time_beats": 2.0,
      "velocity": 1.0
    },
    {
      "daemon": "bass",
      "duration_beats": 0.5,
      "id": "evt_6709168dd4b5548f",
      "kind": "note",
      "params": {
        "cutoff_hz": 300.0,
        "drive": 0.3
      },
      "pitch": {
        "midi": 29,
        "name": "F1"
      },
      "semantic_path": "rite:main/invoke:1/step:4",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 17
      },
      "time_beats": 2.0,
      "velocity": 1.0
    },
    {
      "daemon": "kick",
      "duration_beats": 0.25,
      "id": "evt_a1f1f7447d200b45",
      "kind": "trigger",
      "params": {
        "gain_db": -3.0
      },
      "semantic_path": "rite:main/invoke:0/step:12",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 16
      },
      "time_beats": 3.0,
      "velocity": 1.0
    },
    {
      "daemon": "bass",
      "duration_beats": 0.5,
      "id": "evt_6709188dd4b557f5",
      "kind": "note",
      "params": {
        "cutoff_hz": 300.0,
        "drive": 0.3
      },
      "pitch": {
        "midi": 29,
        "name": "F1"
      },
      "semantic_path": "rite:main/invoke:1/step:6",
      "source": {
        "column": 5,
        "file": "<fixture>/main.rite",
        "line": 17
      },
      "time_beats": 3.0,
      "velocity": 1.0
    }
  ],
  "ir_version": "0.1",
  "language": "0.1",
  "meter": [
    4,
    4
  ],
  "random_streams": [
    {
      "id": "working",
      "seed_hash": "800cd183db4baa28",
      "semantic_path": "working:CLI Test"
    },
    {
      "id": "spell:kicks",
      "seed_hash": "3be9fc08dfb0e230",
      "semantic_path": "working:CLI Test/spell:kicks"
    },
    {
      "id": "spell:bassline",
      "seed_hash": "7b2a6a9dec6e5c34",
      "semantic_path": "working:CLI Test/spell:bassline"
    }
  ],
  "render_targets": [
    {
      "id": "wav",
      "kind": "wav",
      "path": "renders/cli-test.wav",
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 20
      }
    }
  ],
  "rites": [
    {
      "duration_beats": 4.0,
      "id": "main",
      "layer": false,
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 15
      },
      "start_beats": 0.0
    }
  ],
  "seed": "cli",
  "spells": [
    {
      "body": "x---",
      "id": "kicks",
      "kind": "pattern",
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 12
      },
      "transforms": []
    },
    {
      "body": "F1 -",
      "id": "bassline",
      "kind": "notes",
      "source": {
        "column": 3,
        "file": "<fixture>/main.rite",
        "line": 13
      },
      "transforms": []
    }
  ],
  "tempo_bpm": 128.0,
  "working": "CLI Test"
}
